--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_URL=http://localhost:8080/api
 
-VITE_API_URL=https://wallet-backend.onrender.com
+VITE_API_URL=https://wallet-backend-fygqh4fkgdhscpcv.southindia-01.azurewebsites.net/api
